# rmatio

./: .Rbuildignore  .gitignore  .travis.yml  DESCRIPTION  Makefile  NAMESPACE  NEWS  NEWS.md  README.md  cleanup  configure  configure.ac  configure.win
.github/workflows/: R-CI.yaml
R/: have_lib.R  have_lib.R.in  have_lib.r  have_lib.r.in  read_mat.R  read_mat.r  rmatio.R  rmatio.r  write_mat.R  write_mat.r  write_mat.r.in  write_mat.r.win
inst/: NOTICE
inst/extdata/: OneOnly.mat
inst/tests/: test_rmatio.r  test_rmatio.r.in
man/: have.hdf5lib.Rd  have.zlib.Rd  read.mat.Rd  rmatio.Rd  write.mat-methods.Rd
patches/: inflate.c.patch  mat.c.patch  mat4.c.patch  mat5.c.patch  mat5.h.patch  matio.h.patch  matio_private.h.patch  matvar_struct.c.patch  read_data.c.patch
src/: Makevars  Makevars.in  Makevars.win  deflate.c  mat.c  mat4.c  mat5.c  mat5.h  matioConfig.h.in  read_data.c  rmatio.c
src/matio/: CHANGELOG  config.h.in  config.h.win  inflate.c  io.c  mat.c  mat4.c  mat5.c  mat5.h  mat73.c  matio.h  matioConfig.h.win  matio_private.h  matio_pubconf.h.win  matvar_struct.c  read_data.c
src/zlib/: inftrees.c  zlib.h
tests/: arguments.R  array.R  cell.R  complex.R  dgCMatrix.R  lists.R  logical.R  matio_test_datasets.R  matrix.R  one_only.R  run-all.R  string.R  structure.R  vector.R
